--- a/sctool.qrc
+++ b/sctool.qrc
@@ -6,5 +6,11 @@
         <file alias="menuOpenCal">images/tb_open_cal_16x16.png</file>
         <file alias="iconBin">images/file_bin_14x14.png</file>
         <file alias="iconS19">images/file_s19_14x14.png</file>
+        <file alias="menuOpenFull">images/tb_open_full_16x16.png</file>
+        <file alias="menuSaveHdrApp">images/tb_save_app.png</file>
+        <file alias="menuSaveHdrCal1">images/tb_save_cal1.png</file>
+        <file alias="menuSaveHdrCal2">images/tb_save_cal2.png</file>
+        <file alias="iconTool">images/scTool_32x32.png</file>
+        <file alias="iconToolX">images/scTool_x.svg</file>
     </qresource>
 </RCC>
